# mcd_stitcher

./: CHANGELOG.md  Future_updates_wish_list  Future_updates_wish_list.md  LICENSE  README.md  Wish_list.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
mcd_stitcher/: __init__.py  converter.py  helper_utils.py  mcd2zarr_converter.py  mcd_convert.py  mcd_process.py  mcd_stitch.py  mcd_utils.py  stitcher.py  tiff_subset.py  zarr2tiff.py  zarr_stitcher.py
mcd_stitcher/Experimental_scripts/: Zarr_stitcher_manual.py  channel_extract.py  zarr_metadata.py  zarr_stitcher_0.5um.py  zarr_stitcher_manual.py
mcd_stitcher/imclib/: mcdutils.py
mcd_stitcher_developer/: README.md  Wish_list.md  pyproject.toml
mcd_stitcher_developer/imclib/: metadefs.py
mcd_stitcher_developer/mcd_stitcher/: zarr_stitcher.py
mcd_stitcher_developer/mcd_stitcher/imclib/: imcdataparser.py  imcraw.py  mcdmeta.py  mcdxmlparser.py
