[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcd_stitcher"
version = "2.2.0"
authors = [
    {name = "Pawan Chaurasia", email = "pchaurasia98@gmail.com"},
]
description = "A package for MCD file conversion and stitching to OME-TIFFs "
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["imaging", "masscytometry", "StandardBio", "SBT", "IMC", "stitching", "conversion"]

dependencies = [
    "click>=8.1,<9",
    "imagecodecs>=2024.12,<2027",
    "numpy>=2.0,<3",
    "pandas>=2.3,<4",
    "python-dateutil>=2.8,<3",
    "readimc>=0.9,<1",
    "scikit-image>=0.24,<1",
    "tifffile>=2024.8,<2027"
]

[project.urls]
Homepage = "https://github.com/PawanChaurasia/mcd_stitcher"
"Bug Tracker" = "https://github.com/PawanChaurasia/mcd_stitcher/issues"
Repository = "https://github.com/PawanChaurasia/mcd_stitcher"

[project.scripts]
mcd_stitch = "mcd_stitcher.mcd_stitch:main"
mcd_convert = "mcd_stitcher.mcd_convert:main"
tiff_subset = "mcd_stitcher.tiff_subset:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcd_stitcher*"]
