[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcd_stitcher"
version = "2.3.0"
authors = [
    {name = "Pawan Chaurasia", email = "pchaurasia98@gmail.com"},
]
description = "A package for MCD file conversion and stitching to OME-TIFFs "
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["imaging", "masscytometry", "StandardBio", "SBT", "IMC", "stitching", "conversion"]

dependencies = [
    "click>=8.1.8,<=8.4.1",
    "imagecodecs>=2024.12.30,<=2026.5.10",
    "numpy>=2.0.2,<=2.4.6",
    "pandas>=2.3.3,<=3.0.3",
    "pillow>=11.3.0,<=12.2.0",
    "python-dateutil>=2.9.0.post0,<=2.9.0.post0",
    "readimc>=0.9.2,<=0.9.2",
    "scikit-image>=0.24.0,<=0.26.0",
    "tifffile>=2024.8.30,<=2026.6.1"
]

[project.urls]
Homepage = "https://github.com/PawanChaurasia/mcd_stitcher"
"Bug Tracker" = "https://github.com/PawanChaurasia/mcd_stitcher/issues"
Repository = "https://github.com/PawanChaurasia/mcd_stitcher"

[project.scripts]
mcd_stitch = "mcd_stitcher.mcd_stitch:main"
mcd_convert = "mcd_stitcher.mcd_convert:main"
tiff_subset = "mcd_stitcher.tiff_subset:main"
mcd_process = "mcd_stitcher.mcd_process:_cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcd_stitcher*"]
