[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcd_stitcher"
dynamic = ["version"]
authors = [
    {name = "Pawan Chaurasia", email = "pchaurasia98@gmail.com"},
]
description = "A package for MCD file conversion and stitching to OME-TIFFs "
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["imaging", "masscytometry", "StandardBio", "SBT", "IMC", "stitching", "conversion"]

dependencies = [
    "click>=8.1.8",
    "imagecodecs>=2024.12.30",
    "numpy>=2.0.2,<3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-dateutil>=2.9.0",
    "readimc>=0.9.2",
    "scikit-image>=0.24.0",
    "tifffile>=2024.8.30"
]

[project.urls]
Homepage = "https://github.com/PawanChaurasia/mcd_stitcher"
"Bug Tracker" = "https://github.com/PawanChaurasia/mcd_stitcher/issues"
Repository = "https://github.com/PawanChaurasia/mcd_stitcher"

[project.scripts]
mcd_stitch = "mcd_stitcher.mcd_stitch:main"
mcd_convert = "mcd_stitcher.mcd_convert:main"
tiff_subset = "mcd_stitcher.tiff_subset:main"
mcd_process = "mcd_stitcher.mcd_process:_cli_main"

[tool.setuptools.dynamic]
version = {attr = "mcd_stitcher._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mcd_stitcher*"]
