[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = mcd_stitcher
version = attr: mcd_stitcher.__version__
author = Pawan Chaurasia
author_email = "pchaurasia98@gmail.com"
description = MCD to Zarr conversion and stitching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your.url/here
project_urls = 
	Bug Tracker = https://your.url/here/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
setup_requires = 
	setuptools
install_requires = 
	click
	numpy
	pandas
	python_dateutil
	xarray
	zarr

[options.entry_points]
console_scripts = 
	imc2zarr = mcd_stitcher.converter:main
	zarr_stitch = mcd_stitcher.stitcher:main
	mcd_stitch = mcd_stitcher:main

[flake8]
max-line-length = 110
select = C,E,F,W,B,B950
exclude = docs,build,.git,__pycache__,.tox
ignore = E203, E252, E501, W503, W504, B950
max-complexity = 10

[tox:tox]
envlist = py39
isolated_build = True

[testenv]
usedevelop = true
install_command = pip install -U {opts} {packages}
deps = 
	flake8
commands = 
	flake8

[bumpversion:file:mcd_stitcher/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
