[metadata]
name = mcd_stitcher
version = 0.1.5
author = Pawan Chaurasia
author_email = "pchaurasia98@gmail.com"
description = MCD to Zarr conversion and stitching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PawanChaurasia/mcd_stitcher
project_urls = 
    Bug Tracker = https://github.com/PawanChaurasia/mcd_stitcher/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
setup_requires = 
    setuptools
install_requires = 
    click
    numpy
    pandas
    python_dateutil
    xarray
    zarr
    scikit-image

[options.entry_points]
console_scripts = 
    imc2zarr = mcd_stitcher.converter:main
    zarr_stitch = mcd_stitcher.stitcher:main
    mcd_stitch = mcd_stitcher.mcd_stitch:main

[flake8]
max-line-length = 110
select = C,E,F,W,B,B950
exclude = docs,build,.git,__pycache__,.tox
ignore = E203, E252, E501, W503, W504, B950
max-complexity = 10
